Fix styling issues

--- a/src/MyChess.Client/Pages/Play.razor
+++ b/src/MyChess.Client/Pages/Play.razor
@@ -1,6 +1,6 @@
 ﻿@page "/play/{id}"
 @inherits PlayBase
 
-<div className="Play-container">
+<div class="Play-container">
 	<ChessBoardView ID="@ID" />
 </div>
