Update loading spinners

--- a/src/MyChess.Client/Shared/MainLayout.razor
+++ b/src/MyChess.Client/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
 {
 	<div class="welcome">
 		<div class="welcome-Text">
-			<img src="images/logo.svg" />
+			<img src="images/logo.svg" class="Load-logo" />
 			<br />
 			Loading...
 		</div>
