Update list views

--- a/src/MyChess.Client/Pages/Friends.razor.css
+++ b/src/MyChess.Client/Pages/Friends.razor.css
@@ -1,19 +1,1 @@
-﻿.Friends-header {
-    min-height: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.Friends-SubText {
-    font-size: 12pt;
-}
-
-.Friends-Container {
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-}
+﻿
