--- a/src/MyChess.Client/Shared/FriendList.razor.css
+++ b/src/MyChess.Client/Shared/FriendList.razor.css
@@ -3,7 +3,14 @@
 }
 
 .FriendList-link {
-    color: #ffffff;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-decoration: none;
+    z-index: 10;
+    opacity: 0;
 }
 
 .FriendList-AddFriend {
@@ -32,7 +39,8 @@
     margin: 10px;
     height: 160px;
     background-color: #454545;
-    width: 30%;
+    width: 40%;
+    position: relative;
 }
 
     .friendTemplate:hover {
@@ -54,11 +62,17 @@
     width: 90%;
 }
 
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+
+.row {
+    text-align: center;
+    justify-content: center;
 }
+
+    .row::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
 
 [class*="template-"] {
     background-color: #454545;
