--- a/src/MyChess.Client/wwwroot/css/app.css
+++ b/src/MyChess.Client/wwwroot/css/app.css
@@ -17,8 +17,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: rgba(64,64,64,0.6);
     backdrop-filter: blur(6px);
     display: table;
