--- a/src/MyChess.Client/Shared/ChessBoardView.razor
+++ b/src/MyChess.Client/Shared/ChessBoardView.razor
@@ -54,7 +54,7 @@
 
 		Comment:<br />
 		<label>
-			<textarea id="comment" name="comment" title="Comment" @bind="Comment" placeholder="Add your comment here" rows="3" cols="50" />
+			<textarea id="comment" name="comment" title="Comment" @bind="Comment" placeholder="Add your comment here" />
 		</label><br />
 		<button @onclick="ConfirmComment"><span role="img" aria-label="OK">✅</span> Confirm</button>
 		<button @onclick="Cancel"><span role="img" aria-label="Cancel">❌</span> Cancel</button>
