Add padding to enable easier commenting

--- a/src/MyChess.Client/Shared/ChessBoardView.razor
+++ b/src/MyChess.Client/Shared/ChessBoardView.razor
@@ -83,3 +83,10 @@
 		<button @onclick="ResignGame"><span role="img" aria-label="Resign">🛑</span> Resign game</button>
 	</div>
 }
+
+@if (ShowCommentDialog)
+{
+	<div class="Play-Padding">
+        &nbsp;
+	</div>
+}
