--- a/src/MyChess.Client/Shared/GameList.razor.css
+++ b/src/MyChess.Client/Shared/GameList.razor.css
@@ -50,6 +50,10 @@
     opacity: 0;
 }
 
+.GameList-StatusMessage {
+    text-align: center;
+}
+
 .gameTemplate {
     float: left;
     padding: 10px 25px;
