--- a/src/MyChess.Client/Shared/FriendList.razor
+++ b/src/MyChess.Client/Shared/FriendList.razor
@@ -2,33 +2,40 @@
 @using MyChess.Client.Extensions
 
 <div>
-	@if (Friends.Any())
+    @if (!string.IsNullOrEmpty(StatusMessage))
 	{
-		<div class="row g-0">
-			@foreach (var friend in Friends)
-			{
-				<div class="friendTemplate">
-					<div class="nameTemplate">
-						@friend?.Name
-					</div>
+		<h3>@StatusMessage</h3>
+	}
+    else
+    {
+	    @if (Friends.Any())
+	    {
+		    <div class="row g-0">
+			    @foreach (var friend in Friends)
+			    {
+				    <div class="friendTemplate">
+					    <div class="nameTemplate">
+						    @friend?.Name
+					    </div>
 
-					<button type="button" class="manageTemplate" aria-label="Close" @onclick:preventDefault=true @onclick:stopPropagation=true @onclick="() => ManageFriend(friend?.ID)">
-						<span aria-hidden="true">Manage friend</span>
-					</button>
-				    <a href="/play/new?friendID=@friend?.ID" class="FriendList-link"></a>
-				</div>
-			}
-		</div>
-		<div class="subtitle">
-			Or <button @onclick="AddNewFriend">add new</button> friend.
-		</div>
-	}
-	else
-	{
-		<div class="subtitle">
-			No friends found. Click to
-			<button @onclick="Refresh">refresh</button> or
-			<button @onclick="AddNewFriend">add new</button> friend.
-		</div>
-	}
+					    <button type="button" class="manageTemplate" aria-label="Close" @onclick:preventDefault=true @onclick:stopPropagation=true @onclick="() => ManageFriend(friend?.ID)">
+						    <span aria-hidden="true">Manage friend</span>
+					    </button>
+				        <a href="/play/new?friendID=@friend?.ID" class="FriendList-link"></a>
+				    </div>
+			    }
+		    </div>
+		    <div class="subtitle">
+			    Or <button @onclick="AddNewFriend">add new</button> friend.
+		    </div>
+	    }
+	    else
+	    {
+		    <div class="subtitle">
+			    No friends found. Click to
+			    <button @onclick="Refresh">refresh</button> or
+			    <button @onclick="AddNewFriend">add new</button> friend.
+		    </div>
+	    }
+    }
 </div>
