Add indication about who won the game to gamelist

--- a/src/MyChess.Client/Shared/GameList.razor
+++ b/src/MyChess.Client/Shared/GameList.razor
@@ -50,7 +50,7 @@
 						@game?.GetOpponent()
 					</div>
 					<div class="dateTemplate">
-						@game?.GetDate()
+						@game?.GetDate(PlayerID)
 					</div>
 					<div class="statusTemplate">
 						@game?.GetStatus()
