Update nuget packages

--- a/src/MyChess.Client/App.razor
+++ b/src/MyChess.Client/App.razor
@@ -1,4 +1,4 @@
-﻿<ApplicationInsightsComponent />
+﻿@* <ApplicationInsightsComponent /> *@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
